Release notes mechanism + v0.1.7 notes; set Stage 2 target to Java 25
- release.yml: release body is now composed from
  docs/release-notes/v<version>.md (when present) plus the standard
  verification section, so releases describe what is actually in the
  update
- add docs/release-notes/v0.1.7.md (dependency refresh changelog)
- docs/06: Stage 2 reworked into an incremental plan targeting Java 25
  (ASM 9, defineHiddenClass, SecurityManager no-op, FFM-ready chunk
  alloc, add-opens in start scripts, Java 25 smoke job as acceptance)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013i11qXKChMW3pwGD4pkyhB